2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc,exult.cc,gamewin.h/cc: changed more vars from int to bool

2000-11-25  Max Horn  <max@quendi.de>
	* files/utils.cc: changed path_map to be a map of strings instead of a hash_map of char*
	* files/utils.cc: made sure functions are named like some_noun
	* files/utils.cc: get_system_path now implicitly calls switch_slashes
	* changed most uses of char* to string

2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Don't call SDL::CloseAudio(). Bad things seem to happen in there.

2000-11-24  Jeff Freedman  <jeff@amy.nerble.net>
	* Write out correct count for 'monsnpcs.dat'.

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.h/cc, palette.cc, exult.cc: new config/video/disable_fades (yes/no) option

2000-11-25  Max Horn  <max@quendi.de>
	* changed a lot vars from unsigned char to bool (and 0->false, 1->true)
	* objs.cc: static find_nearby() now properly uses dynamic_cast instead of C-style cast
	* exult.cc: activated Unicode mapping for key, used that to improve Handle_keystroke()
	
2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc,exult.cc,gamewin.h: fixed gump buttons passing clicks to underlying items
	* cheat.h/cc: made most member functions const

2000-11-24  Max Horn  <max@quendi.de>
	* objs.cc: added find_nearby_eggs() and find_nearby_actors()
	* changed various locations to use these methods instead of find_nearby()
	* files/*.cc: removed unused method retrieve(int objnum,const char *)
	* files/*.cc: retrieve() does not return anything anymore but throws exceptions
	* exceptions.h: collected all exception related stuff into one header file
	* palette.cc: Palette::load() does throw an exception instead of returning an int

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: fix for Test of Love conv. bug. See mailing list.

2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>